# MathLib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  buildLog.txt  codeql-analysis.yml  doClean.sh  doTest.bat
docs/sigProc/StableRecursiveMovAvgFilterA/: block-diagram.drawio
include/: CMakeLists.txt  RlsFilter.hpp  analysis.hpp  common.hpp  linAlg.hpp  sigProc.hpp
scripts/: doDebugBuild.bat  doDebugBuild.sh
test/: CMakeLists.txt  test_RlsFilter.cpp  test_analysis.cpp  test_linAlg.cpp  test_sigProc.cpp
